# Maskara

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/: bootstrap.py  logging.py  main.py  middlware.py  router.py  settings.py
src/apps/anonymization/: depends.py  router.py
src/apps/anonymization/schemas/: data.py
src/apps/anonymization/use_cases/: anonymize.py
src/apps/auth/: auth.py  depends.py
src/core/: schemas.py
src/core/services/anonymizer/: base.py  depends.py  schemas.py
src/core/services/anonymizer/gliner/: gliner.py  gliner_text_chunker.py
